# rust-msgboard

./: .env  Cargo.toml  README.md
migrations/: 20230122051809_users.sql  20230122052815_messages.sql  20230122135808_user_uuid.sql
src/: lib.rs  main.rs
src/controller/: controller_type.rs  message.rs  middleware.rs  mod.rs  response.rs  user.rs
src/model/: message.rs  mod.rs  user.rs  user_uuid.rs
src/repository/: message.rs  user.rs
src/tests/: mod.rs  repository.rs
src/utility/: errors.rs
